# neuralnet

./: CMakeLists.txt  io.c  io.h  linear.h  main.c  main.cpp  model.c  model.h  neuralnet  neuralnet.c  neuron.h  nn.c  nncli.c  nnhost.c  nnhost.h  nnio.c  nnio.h
src/: exec.c  exec.h  host.c  host.h  io.c  io.h  model.c  model.h  nn.c  nncli.c  state.h
